# booking_hotels_review

./: .envexample  .gitignore  Dockerfile  README.md  Task.docx  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
booking_service/booking_app/: models.py  serializers.py  views.py
booking_service/booking_app/migrations/: 0001_initial.py
booking_service/booking_service/: config.py  settings.py  urls.py
tests/: test_serializers.py
tests/test_views/: test_reservation_view.py  test_room_view.py
